# horcrux

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  example.py  pyproject.toml  tox.ini
.cm/: gitstream.cm
.github/: dependabot.yml
.github/workflows/: ci.yaml  codecov.yml  codeql.yml  dependency-review.yml  gitstream.yml  publish.yaml  scorecards.yml
examples/: hello.py  image.py  password.py
shamir/: __init__.py
shamir/math/: __init__.py  tables.py
shamir/utils/: __init__.py
tests/: test_blns.py  test_shamir.py
tests/math/: test_math.py  test_tables.py
tests/utils/: test_polynomial.py
