[tool.mypy]
python_version = "3.9"
follow_imports = "silent"
strict_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_column_numbers = true


[tool.poetry]
authors = ["Reid Hochstedler <reidhoch@gmail.com>"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Horcrux - A Python implementation of Shamir's Secret Sharing."
license = "MPL-2.0"
name = "horcrux"
packages = [{ include = "shamir" }]
readme = "README.md"
repository = "https://github.com/reidhoch/horcrux"
version = "1.0.1"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^1.9"
pre-commit = "^3.7"
pytest = "^8.1"
pytest-cov = "^5.0"
pytest-profiling = "^1.7"
pytest-xdist = { extras = ["psutil"], version = "^3.5" }
ruff = "^0.3.7"
tox = "^4.14"
typer = { extras = ["all"], version = "^0.12.3" }

[tool.ruff]
line-length = 88
target-version = 'py39'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
